# safe-shadow-stack

./: CMakeLists.txt  LICENSE  README.md  build.sh  shadowcallstack.c  shared_work.txt
sample-dr-clients/: .gitignore
sample-dr-clients/countcalls/: CMakeLists.txt  countcalls.c
sample-dr-clients/helloworld/: CMakeLists.txt  helloworld.c
sample-dr-clients/instrcalls/: CMakeLists.txt  instrcalls.c
shadowcallstack/: CMakeLists.txt  shadowcallstack.c
tests/exploit_progs/: .gitignore  Makefile  exploit1.c  exploit2.c
tests/longjmp_progs/: Makefile  test1.c  test2.c  test3.c
tests/rand_progs/: Makefile  helloworld  helloworld.c
tests/samples/: Makefile  program1.c  program2.c
tests/samples/exploits/: Makefile  exploit1.c  exploit2.c  exploit3.c
tests/vuln_progs/: .gitignore  Makefile  program1.c  program2.c
